[package]
name = "pipy-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cmake = "0.1.50"

[dependencies]
libc = "0.2.155"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
